ci: test and release Java artifacts